# Hopinosis

./: .gitignore  CONTRIBUTING.md  Hopinosis.cabal  README.md  samples.md
.github/: labeler.yml
.github/workflows/: build.yml
App/: Program.hs
CPP/: cosine_similarity.cpp  cosine_similarity.h
Files/: .gitignore  coon.txt  darkwing.txt  reviews.txt
Lib/Core/: Graph.hs  Metric.hs  Node.hs  Types.hs
Lib/Core/Metric/: Internals.hs  cosine_similarity.cpp  cosine_similarity.h
Lib/Core/Selection/: Internals.hs
Src/: Hopinosis.hs
Src/Core/: Graph.hs  Metric.hs  Node.hs  Path.hs  Selection.hs  Selector.hs  Types.hs
Src/Core/Path/: Internals.hs
Src/Core/Selection/: Internals.hs
Src/Core/Selector/: Internals.hs
Test/: IntegrationTests.py  UnitTests.hs
Test/Tests/: GraphTests.hs  MetricTests.hs  NodeTests.hs  PathTests.hs  SelectionTests.hs  TestSuite.hs  TestUtils.hs
