cabal-version:       2.4
name:                Hopinosis
version:             0.0.2
synopsis:            library to supply "Opinosis"-Algorithm APIs

bug-reports:         https://github.com/Twonki/Hopinosis/issues
license:             MIT
license-file:        LICENSE
author:              Leonhard Applis
maintainer:          Leonhard.Applis@Protonmail.com
category:            library
extra-source-files:  README.md


library
  exposed-modules:    Hopinosis
                      Core.Metric
  -- Modules included in this executable, other than Main.
  other-modules:      Core.Types
                      Core.Node
                      Core.Graph
                      Core.Path
                      Core.Path.Internals
                      Core.Selection
                      Core.Selection.Internals
  ghc-options:
    -O2
    -Wall
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base,
                       monoidal-containers,
                       split,
                       parallel,
                       containers,
                       text,
                       sort

  -- Directories containing source files.
  hs-source-dirs:      Src
  -- Base language which the package is written in.
  default-language:    Haskell2010

Test-Suite HUnitTestSuite
  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs
  hs-source-dirs:      Test
                       Src
  other-modules:       Core.Types
                       Core.Node
                       Core.Graph
                       Core.Metric
                       Core.Path
                       Core.Path.Internals
                       Core.Selection
                       Core.Selection.Internals
                       Tests.NodeTests
                       Tests.GraphTests
                       Tests.PathTests
                       Tests.MetricTests
                       Tests.SelectionTests
                       Tests.TestSuite
  build-depends:       base,
                       monoidal-containers,
                       parallel,
                       QuickCheck,
                       containers,
                       split,
                       sort,
                       text,
                       test-framework-quickcheck2,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
  default-language: Haskell2010