cabal-version:       2.4
name:                Hopinosis
version:             0.1.2.0
synopsis:            library to supply "Opinosis"-Algorithm APIs

bug-reports:         https://github.com/Twonki/Hopinosis/issues
license:             MIT
license-file:        LICENSE
author:              Leonhard Applis
maintainer:          Leonhard.Applis@Protonmail.com
category:            library
extra-source-files:  README.md

common deps
  build-depends:  base,
                  monoidal-containers,
                  split,
                  parallel,
                  containers,
                  text,
                  data-ordlist,
                  sort,
                  deepseq
  ghc-options:
    -O2

common test-deps
  build-depends:       test-framework-quickcheck2,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       QuickCheck

library
  import: deps
  exposed-modules:    Hopinosis
                      Core.Metric
                      Core.Types
                      Core.Graph
                      Core.Node
                      Core.Path
                      Core.Selection
                      Core.Path.Internals
                      Core.Selection.Internals
  -- Modules included in this executable, other than Main.
  --other-modules:      

  -- Directories containing source files.
  hs-source-dirs:      Src
  -- Base language which the package is written in.
  default-language:    Haskell2010

Test-Suite HUnitTestSuite
  import: deps, test-deps
  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs
  hs-source-dirs:      Test
  build-depends:       Hopinosis
  other-modules:       Tests.NodeTests
                       Tests.GraphTests
                       Tests.PathTests
                       Tests.MetricTests
                       Tests.SelectionTests
                       Tests.TestSuite
  default-language: Haskell2010