cabal-version:       3.0
name:                Hopinosis
version:             0.1.2.1
synopsis:            library to supply "Opinosis"-Algorithm APIs

bug-reports:         https://github.com/Twonki/Hopinosis/issues
license:             MIT
license-file:        LICENSE
author:              Leonhard Applis
maintainer:          Leonhard.Applis@Protonmail.com
category:            library
extra-source-files:  README.md

common deps
  build-depends:  base                  >= 4.13.0 && < 4.14,
                  containers            >= 0.6.2 && < 0.7,
                  deepseq               >= 1.4.4 && < 1.5,
                  data-ordlist          >= 0.4.7 && < 0.5,
                  monoidal-containers   >= 0.6.0 && < 0.7,
                  text                  >= 1.2.4 && < 1.3,
                  parallel              >= 3.2.2 && < 3.3,
                  sort                  >= 1.0.0 && < 1.1,
                  split                 >= 0.2.3 && < 0.3
  ghc-options:
    -O2
  default-language:    Haskell2010


common test-deps
  build-depends:       test-framework-quickcheck2,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       QuickCheck

library
  import: deps
  exposed-modules:    Hopinosis
                      Core.Metric
                      Core.Types
                      Core.Graph
                      Core.Node
                      Core.Path
                      Core.Selection
  other-modules:      Core.Path.Internals
                      Core.Selection.Internals
  hs-source-dirs:     Lib


executable Hopinosis
  import: deps
  main-is:            Program.hs
  ghc-options:
    -rtsopts  
    -threaded
  build-depends:       Hopinosis,
                       optparse-applicative == 0.15.1.0
  hs-source-dirs:      App
  build-depends:       time

Test-Suite HUnitTestSuite
  import: deps, test-deps
  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs
  hs-source-dirs:      Test
  build-depends:       Hopinosis
  other-modules:       Tests.NodeTests
                       Tests.GraphTests
                       Tests.PathTests
                       Tests.MetricTests
                       Tests.SelectionTests
                       Tests.TestSuite